improve visual style

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        background: #222;
+        background: linear-gradient(black 70%, transparent 70%),
+          linear-gradient(90deg, black 50%, transparent 50%), hsl(0, 0%, 17%);
+        background-size: 5px 5px;
       }
     </style>
   </head>
